# InterpreterTinyBasic

./: CMakeLists.txt  Makefile  Makefile2.txt  README.md
Main/: Analyzer.c  Analyzer.h  InterpreterState.c  InterpreterState.h  Lexemes.c  Lexemes.h  Makefile.txt  TinyErrors.c  TinyErrors.h  TinyFunctions.c  TinyFunctions.h  TinyVariables.c  TinyVariables.h  main.c
Tests/: Factorial.txt  IfTest  PrintInputTest.txt  TestAll.txt  VarExpressions.txt
